crates/vise/tests/ui/labels/duplicate_label_value.stderr
error: Label value `test` is redefined
 --> tests/ui/labels/duplicate_label_value.rs:7:5
  |
7 | /     #[metrics(name = "test")]
8 | |     Other,
  | |_________^
